# puddle

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/puddle/: __about__.py  __init__.py  __main__.py  collection.py  config.py  init.py  llm.py  model.py  prompts.py
src/puddle/cli/: __init__.py
src/puddle/models/: llamafile.py  openai.py
tests/: __init__.py
