[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "puddle"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zebulun Arendsee", email = "arendsee@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "openai",
  "pydantic",
  "termcolor",
  "pillow",
]

[project.urls]
Documentation = "https://github.com/Zebulun Arendsee/puddle#readme"
Issues = "https://github.com/Zebulun Arendsee/puddle/issues"
Source = "https://github.com/Zebulun Arendsee/puddle"

[project.scripts]
puddle = "puddle.cli:puddle"

[tool.hatch.version]
path = "src/puddle/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/puddle tests}"

[tool.coverage.run]
source_pkgs = ["puddle", "tests"]
branch = true
parallel = true
omit = [
  "src/puddle/__about__.py",
]

[tool.coverage.paths]
puddle = ["src/puddle", "*/puddle/src/puddle"]
tests = ["tests", "*/puddle/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
